fixed the spacing problem with border while hovering card. Changed avatar property's to match figma design

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -16,7 +16,6 @@
 }
 .avatar-square {
   width: 40px;
-  border-radius: 0px;
+  border-radius: 10px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
 }
