--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -67,8 +67,6 @@
   position: fixed;
   width: 80px;
   transform: rotate(30deg);
-
-
 }
 
 .booking-card-coach {
@@ -94,14 +92,15 @@
 
 .card-customize {
   background-color: #E5E5E5;
+  border: 4px solid rgb(226, 226, 226);
   border-radius: 10px;
   margin-top: 20px;
+  padding: 4px;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .card-customize:hover {
   border: 4px solid rgb(255, 153, 0);
-  border-radius: 10px;
 }
 
 // Smallest device
